--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body::-webkit-scrollbar {
   display:none;
 }
 
+
 .navigation-bar {
   display: flex;
   justify-content: center;
@@ -256,7 +257,7 @@ canvas[class="dominant-emotion"] {
   gap: 1rem;
   border-radius: 16px;
   background: #00000095;
-  box-shadow: 0 0 0 2px #5f5f5f;
+  box-shadow: 0 0 0 1px #2a2a2a;
   z-index: 4;
 }
 .center-area-wrapper{
@@ -308,7 +309,8 @@ canvas[class="dominant-emotion"] {
 }
 
 
-.btn-go-right-column {
+.btn-go-right-column,
+.custom-btn-dorian {
   background-color: #111;
   color: #fff;
   border: 1px solid #555;
@@ -495,17 +497,92 @@ canvas#dorian-canvas {
     gap: 2rem;
     margin: 0 auto;
     max-width: 95vw;
-    padding: 1rem 0.5rem;
+    padding: 1rem 0.7rem;
     box-sizing: border-box;
     z-index: 10;
+    transition: 1.5s all ease;
+    background: rgba(20, 20, 20, 0.161);
+    backdrop-filter: blur(12px);
+    animation-name: rgbBoxShadow;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
+    border-radius: 2rem;
     
+  }
+  .ui-speed-btns {
+    gap: 5rem;
+    margin: 0 auto;
+  }
+  
+  @keyframes rgbBoxShadow {
+    0% {
+      box-shadow: 0 -5px 15px 5px rgba(255, 255, 255, 0.2);      
+    }
+    14% {
+      box-shadow: 0 -5px 15px 5px rgba(0, 47, 255, 0.2);    
+    }
+    28% {
+      box-shadow: 0 -5px 15px 5px rgba(255, 255, 255, 0.2);  
+    }
+    42% {
+      box-shadow: 0 0 -6px 5px rgba(0, 13, 255, 0.2);      
+    }
+    57% {
+      box-shadow: 0 0 15px 5px rgba(0,0,255,0.2);      
+    }
+    71% {
+      box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.2);    
+    }
+    85% {
+      box-shadow: 0 0 15px 5px rgba(0, 0, 255, 0.2);  
+    }
+    100% {
+      box-shadow: 0 0 8px 5px rgba(0, 4, 255, 0.2);    
+    }
   }
   .header {
     margin: 1rem 0.5rem 2rem 0.5rem;
   }
   .heading-title{
-    font-size: 4rem;
+    font-size: 7rem;
+    font-weight: 600;
     letter-spacing: -0.4rem;
+    animation-name: livingGlow;
+    animation-iteration-count: infinite;
+    transition: 2s ease-in-out;
+    animation-duration: 5s;
+    text-shadow: rgba(230, 230, 230, 0.43) 0 -8px 3px, rgba(255, 255, 255, 0.739) 0 0 3px;
+    
+  }
+  .heading-title:hover{
+    animation: none;
+  }
+  @keyframes livingGlow {
+  0% {
+    text-shadow: 0 2px 10px #ffffffc8, 0 0 5px #ffffffc6;
+    transform: scale(1);
+    opacity: 0.90;
+  }
+  25% {
+    text-shadow: 0 -5px 15px #ffffffb1, 0 0 10px #ffffff89;
+    transform: scale(1.02);
+    opacity: 0.90;
+  }
+  50% {
+    text-shadow: 0 -10px 10px rgba(255, 255, 255, 0.838), 0 0 15px #ffffffcd;
+    transform: scale(1.03);
+    opacity: 1;
+  }
+  75% {
+    text-shadow: 0 -5px 15px #ffffff9e, 0 0 10px #ffffff7d;
+    transform: scale(1.02);
+    opacity: 0.90;
+  }
+  100% {
+    text-shadow: 0 2px 10px #ffffffc8, 0 0 5px #ffffffc7;
+    transform: scale(1);
+    opacity: 0.90;
+  }
   }
   .header-video{
     z-index: 0;
@@ -517,8 +594,8 @@ canvas#dorian-canvas {
     margin: 0 auto;
   }
   .thought-log-title{
-    font-size: 3rem;
-    padding: 0.8rem;
+    font-size: 2.5rem;
+    padding: 0.2rem;
     letter-spacing: 0rem;
     border-bottom: 0.2rem dotted rgb(51, 51, 51);
     font-weight: 300;
@@ -527,14 +604,16 @@ canvas#dorian-canvas {
   .thought-log-subtitle{
     padding: 0.5rem;
     font-weight: 100;
-    font-size: 1rem;
+    font-size: 1.6rem;
+    font-family: "chakra petch";
+    text-align: left;
   }
   .input-text-box{
     width: 100%;
     box-sizing: border-box;
     margin: 0;
   }
-.input-text{ max-width: 70%;
+  .input-text{ max-width: 70%;
   font-size: 1.2rem;}
 
   
@@ -575,7 +654,7 @@ canvas#dorian-canvas {
     box-sizing: border-box;
   }
   .column-right-column-upper{
-    gap: 2rem;
+    gap: 0.6rem;
   }
   .ui-card,
   .gpt-answer-text-box {
@@ -590,6 +669,35 @@ canvas#dorian-canvas {
     width: 100%;
     height: auto;
     max-width: 100%;
+  }
+
+  .ux-manager {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.5rem;
+  justify-content: center;
+  text-align: center;
+  font-size: 3.2em;
+  font-weight: 600;
+  font-family: "Orbitron";
+  color: #ffffff;
+  border-bottom: 0.2rem dotted white;
+  border-radius: 1rem;
+  border-width: 0.1rem;
+  text-shadow: rgb(67, 67, 67) 0 -10px 3px, rgba(27, 27, 27, 0.739) 0 0 3px;
+  }
+
+  .ux-manager-subtitle {
+  font-size: 1em;
+  color: #ffffff;
+  font-weight: 100;
+  text-shadow: white 0 0 4px, rgba(163, 163, 163, 0.739) 0 0 2px;
+  text-align: center;
+  }
+
+  .speed-slider {
+    width: 100%;
   }
 }
 
