--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body::-webkit-scrollbar {
   cursor: pointer;
   z-index: 1;
   animation-name: livingGlow, slideFadeIn;
-  animation-duration: 10s, 2s;
+  animation-duration: 5s, 2s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite, 1;
@@ -142,7 +142,7 @@ body::-webkit-scrollbar {
   height: auto;
   transform: translate(-50%, -50%);
   z-index: 0;
-  opacity: 0.2;          /* Dim it so text stands out */
+  opacity: 0.1;          /* Dim it so text stands out */
   pointer-events: none;
   scale: 1;
   translate: -50%;
@@ -162,7 +162,6 @@ main.layout {
   z-index: 10;
   /* Glassmorphism effect */
   background: rgba(20, 20, 20, 0.161);
-  box-shadow: 0 5px 10px 0px rgba(0, 4, 59, 0.864);
   backdrop-filter: blur(12px);
   overflow: auto;
   -webkit-backdrop-filter: blur(12px);
@@ -188,59 +187,7 @@ canvas:hover {
   z-index: 10;
 }
 
-canvas.dominant-emotion-joy {
-  box-shadow: 0 0 5px 0 rgba(255, 251, 0, 0.4) !important;
-}
-canvas.dominant-emotion-trust {
-  box-shadow: 0 0 5px 0 rgba(0, 255, 120, 0.4) !important;
-}
-canvas.dominant-emotion-fear {
-  box-shadow: 0 0 5px 0 rgba(0, 153, 153, 0.4) !important;
-}
-canvas.dominant-emotion-surprise {
-  box-shadow: 0 0 5px 0 rgba(102, 0, 204, 0.4) !important;
-}
-canvas.dominant-emotion-sadness {
-  box-shadow: 0 0 5px 0 rgba(51, 102, 204, 0.4) !important;
-}
-canvas.dominant-emotion-disgust {
-  box-shadow: 0 0 5px 0 rgba(230, 0, 120, 0.4) !important;
-}
-canvas.dominant-emotion-angry {
-  box-shadow: 0 0 5px 0 rgba(255, 0, 0, 0.4) !important;
-}
-canvas.dominant-emotion-anticipation {
-  box-shadow: 0 0 5px 0 rgba(255, 128, 0, 0.4) !important;
-}
-canvas.dominant-emotion-affectionate {
-  box-shadow: 0 0 5px 0 rgba(255, 200, 100, 0.4) !important;
-}
-canvas.dominant-emotion-shocked {
-  box-shadow: 0 0 5px 0 rgba(150, 50, 200, 0.4) !important;
-}
-canvas.dominant-emotion-contempt {
-  box-shadow: 0 0 5px 0 rgba(200, 0, 100, 0.4) !important;
-}
-canvas.dominant-emotion-hopeful {
-  box-shadow: 0 0 5px 0 rgba(100, 255, 180, 0.4) !important;
-}
-canvas.dominant-emotion-depressed {
-  box-shadow: 0 0 5px 0 rgba(100, 100, 180, 0.4) !important;
-}
-canvas.dominant-emotion-delight {
-  box-shadow: 0 0 5px 0 rgba(255, 220, 50, 0.4) !important;
-}
-canvas.dominant-emotion-anxiety {
-  box-shadow: 0 0 5px 0 rgba(50, 100, 200, 0.4) !important;
-}
-canvas.dominant-emotion-aggression {
-  box-shadow: 0 0 5px 0 rgba(255, 50, 50, 0.4) !important;
-}
 
-canvas[class="dominant-emotion"] {
-  transition: box-shadow 1.2s cubic-bezier(0.2, 0, 0.8, 1),
-    box-glow 1.2s ease-in-out;
-}
 
 /* Panels */
 .column-left-column,
@@ -254,10 +201,9 @@ canvas[class="dominant-emotion"] {
   align-items: center;
   border-radius: 1rem;
   z-index: 10;
-  gap: 1rem;
+  gap: 5rem;
   border-radius: 16px;
   background: #00000095;
-  box-shadow: 0 0 0 1px #2a2a2a;
   z-index: 4;
 }
 .center-area-wrapper{
@@ -266,9 +212,8 @@ canvas[class="dominant-emotion"] {
   align-items: center;
   min-width: 0;
   overflow: hidden;
-  border: 1px solid grey;
   margin: 0;
-  padding: 3rem;
+  padding: 4rem;
   box-sizing: border-box;
 }
 .column-right-column-upper {
@@ -359,7 +304,7 @@ canvas[class="dominant-emotion"] {
   border-radius: 10px;
   background: #000000;
   transition: box-shadow 0.4s ease-in-out;
-  border: solid 1px rgba(255, 255, 255, 0.658);
+  border: solid 1px rgba(42, 42, 42, 0.658);
 }
 
 
@@ -371,7 +316,7 @@ canvas[class="dominant-emotion"] {
   align-items: center;
   min-width: 0;
   overflow: hidden;
-  border: 1px solid rgb(62, 62, 62);
+  border: 1px solid rgb(0, 0, 0);
   z-index: 10;
 
 }
@@ -387,10 +332,10 @@ canvas[class="dominant-emotion"] {
   width: 100%;
   border-radius: 15px;
   background-color: #000000ac;
-  box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.05), 0 0 8px #ffffff;
+  box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.05), 0 0 8px #949494;
   border: 1.5px solid rgba(255, 255, 255, 0.08);
   font-weight: 100;
-  font-size: 2.3rem;
+  font-size: 1.7rem;
   letter-spacing: 1px;
   text-shadow: white 0 0 3px, black 0 0 2px;
   color: #cfcfcf;
@@ -401,12 +346,11 @@ canvas[class="dominant-emotion"] {
   justify-content: center;
   align-items: center;
   width: 100%;
-  
 }
 .gpt-answer-text-box {
   overflow-y: auto;
   border-radius: 15px;
-  padding: 1rem;
+  padding: 8rem 1rem;
   min-width: 100%;
   min-height: 30%;
   margin-bottom: 20px;
@@ -496,7 +440,7 @@ canvas#dorian-canvas {
     grid-template-columns: 1fr;
     gap: 2rem;
     margin: 0 auto;
-    max-width: 95vw;
+    max-width: 100vw;
     padding: 1rem 0.7rem;
     box-sizing: border-box;
     z-index: 10;
@@ -504,7 +448,7 @@ canvas#dorian-canvas {
     background: rgba(20, 20, 20, 0.161);
     backdrop-filter: blur(12px);
     animation-name: rgbBoxShadow;
-    animation-duration: 30s;
+    animation-duration: 10s;
     animation-iteration-count: infinite;
     border-radius: 2rem;
     
@@ -544,16 +488,20 @@ canvas#dorian-canvas {
     margin: 1rem 0.5rem 2rem 0.5rem;
   }
   .heading-title{
-    font-size: 7rem;
-    font-weight: 600;
+    font-size: 5rem;
+    font-weight: 400;
     letter-spacing: -0.4rem;
     animation-name: livingGlow;
     animation-iteration-count: infinite;
     transition: 2s ease-in-out;
-    animation-duration: 5s;
-    text-shadow: rgba(230, 230, 230, 0.43) 0 -8px 3px, rgba(255, 255, 255, 0.739) 0 0 3px;
-    
+    animation-duration: 8s;
+    text-shadow: rgba(230, 230, 230, 0.885) 0 -8px 3px, rgba(255, 255, 255, 0.921) 0 0 3px;
   }
+  
+  .heading-subtitle {
+    margin-bottom: 160px;
+  }
+  
   .heading-title:hover{
     animation: none;
   }
@@ -574,7 +522,7 @@ canvas#dorian-canvas {
     opacity: 1;
   }
   75% {
-    text-shadow: 0 -5px 15px #ffffff9e, 0 0 10px #ffffff7d;
+    text-shadow: 0 -5px 15px #ffffff9e, 0 0 10px #ffffffcf;
     transform: scale(1.02);
     opacity: 0.90;
   }
@@ -584,8 +532,23 @@ canvas#dorian-canvas {
     opacity: 0.90;
   }
   }
-  .header-video{
+    .header-video {
+    position: absolute;
     z-index: 0;
+
+      top: 20%;
+      left: 70%;
+      width: 300px;          /* Adjust as needed */
+      height: auto;
+      transform: translate(-50%, -50%);
+      z-index: 0;
+      opacity: 0.2;          /* Dim it so text stands out */
+      pointer-events: none;
+      scale: 1;
+      translate: -50%;
+      /* Prevent interaction */
+}
+
   }
   .thought-log-video{
     opacity: 0.4;
@@ -612,9 +575,12 @@ canvas#dorian-canvas {
     width: 100%;
     box-sizing: border-box;
     margin: 0;
+    padding-bottom: 35px;
   }
   .input-text{ max-width: 70%;
-  font-size: 1.2rem;}
+  font-size: 2rem;
+  font-family: "rajdhani"
+}
 
   
   .thought-log-parent,
@@ -663,13 +629,18 @@ canvas#dorian-canvas {
     margin: 0;
     font-size: 1.3rem;
   }
+  .column-left-column{
+    margin-bottom: 50px;
+  }
   
 
   canvas#dorian-canvas {
-    width: 100%;
-    height: auto;
-    max-width: 100%;
+    max-height: auto;
+    display: block;
+    max-width: 432px;
   }
+
+  
 
   .ux-manager {
   display: flex;
@@ -699,7 +670,7 @@ canvas#dorian-canvas {
   .speed-slider {
     width: 100%;
   }
-}
+
 
 
 
@@ -872,7 +843,8 @@ input[type="checkbox"]:checked{
 
 #gpt-output::after {
   content: "_";
-  animation: blink 1s infinite;
+  animation: blink 0.8s infinite;
+  
 }
 
 @keyframes blink {
